# oversight

./: .env.example  .gitignore  ArXivDBWrapper.py  ArXivRepository.py  ArXivRepositoryDB.py  CLAUDE.md  Caddyfile  Dockerfile.api  EmailSender.py  EmbeddingModel.py  Makefile  OpenReviewHarvester.py  Paper.py  PaperDatabase.py  PaperRepository.py  ResearchLLM.py  ResearchListener.py  SickleWrapper.py  dev.sh  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.yml  extract_eurosys26_abstracts.py  flask_app.py  main.py  notebook.ipynb  pyproject.toml  relevant_abstracts.py  requirements.txt  search.py  shell.nix  start_oversight.sh
.githooks/: pre-commit
agent_scrapers/: cached_webpage_retriever.py  encoding_diagnostic.py  retrieve_abstract_from_pdf.py  test_encoding_fix.py  test_scraper_encoding.py  test_vldb_scraper.py  vldb_scraper.py
data/original/: atc20.json  atc21.json  atc22.json  atc23.json  atc24.json  eurosys21.json  eurosys22.json  eurosys23.json  eurosys24.json  eurosys_asplos25.json  mlsys24.json  nsdi20.json  nsdi21.json  nsdi22.json  nsdi23.json  nsdi24.json  (+11 more)
docker/: Makefile  docker-compose.yml
docs/: pl-conferences-plan.md  similarity-graph-plan.md
examples/: llm.py  outbound.py  outbound_assistant.py  rag_example.ipynb  test_text.py  text.py  whatsapp.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
markdown/: cluster-labelling.md  deckgl-render.md  mean-color-density.md  pl-conferences-plan.md  streaming-points.md
scripts/: README.md  add_embeddings.ipynb  add_uuids.py  arxiv_normal_api_example.py  build_atlas_clusters.py  install_sync_cron.sh  load_pacmap_coords.py  pre_process_conferences.py
src/: ArXivRepository.py  AuthorExtractor.py  ConferenceSearchEngine.py  EmailSender.py  EmbeddingModel.py  OpenReviewHarvester.py  Paper.py  PaperDatabase.py  PaperRepository.py  ResearchLLM.py  ResearchListener.py  SickleWrapper.py  flask_app.py  relevant_abstracts.py  search.py  utils.py
tests/: test_author_extractor.py  test_neighbors.py  test_source_poller.py
(+311 files in other folders)
